modified:   platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+
+[platformio]
+description = Resistive adapter of steering wheel keys
