--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,9 @@
 // AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
 //
-// PIO Unified Debugger
+// PlatformIO Debugging Solution
 //
-// Documentation: https://docs.platformio.org/page/plus/debugging.html
-// Configuration: https://docs.platformio.org/page/projectconf/section_env_debug.html
+// Documentation: https://docs.platformio.org/en/latest/plus/debugging.html
+// Configuration: https://docs.platformio.org/en/latest/projectconf/sections/env/options/debug/index.html
 
 {
     "version": "0.2.0",
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/ermil/.vscode/Projects/Arduino_Resistive_Remote/.pio/build/nanoatmega328/firmware.elf",
+            "executable": "C:/Users/Сергей/.vscode/Repo/Arduino_Resistive_Remote/.pio/build/nanoatmega328/firmware.elf",
             "projectEnvName": "nanoatmega328",
-            "toolchainBinDir": "C:/Users/ermil/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/ermil/.vscode/Projects/Arduino_Resistive_Remote/.pio/build/nanoatmega328/firmware.elf",
+            "executable": "C:/Users/Сергей/.vscode/Repo/Arduino_Resistive_Remote/.pio/build/nanoatmega328/firmware.elf",
             "projectEnvName": "nanoatmega328",
-            "toolchainBinDir": "C:/Users/ermil/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/Users/ermil/.vscode/Projects/Arduino_Resistive_Remote/.pio/build/nanoatmega328/firmware.elf",
+            "executable": "C:/Users/Сергей/.vscode/Repo/Arduino_Resistive_Remote/.pio/build/nanoatmega328/firmware.elf",
             "projectEnvName": "nanoatmega328",
-            "toolchainBinDir": "C:/Users/ermil/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
